cmake_minimum_required(VERSION 3.19.2)
project(codingce_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(codingce_cpp main.cpp)
add_executable(ArrayFEF 数组/485.cpp)
add_executable(addStrings 数组/415.cpp)
add_executable(replaceSpace 数组/05.cpp)
add_executable(maxSubsequence 数组/2099.cpp)
add_executable(DomTree dom/DomTree.cpp)
add_executable(generate 数组/118.cpp)
add_executable(UnorderedMapTest 数组/UnorderedMapTest.cpp)
add_executable(QuickSort 排序/QuickSort.cpp)
add_executable(FindErrorNums 数组/645.cpp)
add_executable(MaximumProduct 数组/628.cpp)
add_executable(ThirdMax 数组/414.cpp)
add_executable(Singleton 设计模式/Singleton.cpp)
add_executable(NumWays 动态规划/NumWays.cpp)